tests/rosetta/out/C/chat-server.error
cc: exit status 1
/tmp/chat-server.c: In function ‘add’:
/tmp/chat-server.c:43:41: error: ‘clients’ undeclared (first use in this function)
   43 |   list_string tmp5 = concat_list_string(clients, tmp4);
      |                                         ^~~~~~~
/tmp/chat-server.c:43:41: note: each undeclared identifier is reported only once for each function it appears in
/tmp/chat-server.c: In function ‘_remove’:
/tmp/chat-server.c:58:3: error: ‘clients’ undeclared (first use in this function)
   58 |   clients = removeName(clients, name);
      |   ^~~~~~~
/tmp/chat-server.c:58:13: warning: implicit declaration of function ‘removeName’; did you mean ‘remove’? [-Wimplicit-function-declaration]
   58 |   clients = removeName(clients, name);
      |             ^~~~~~~~~~
      |             remove
/tmp/chat-server.c: At top level:
/tmp/chat-server.c:64:13: error: conflicting types for ‘removeName’; have ‘list_string(list_string,  char *)’
   64 | list_string removeName(list_string names, char *name) {
      |             ^~~~~~~~~~
/tmp/chat-server.c:58:13: note: previous implicit declaration of ‘removeName’ with type ‘int()’
   58 |   clients = removeName(clients, name);
      |             ^~~~~~~~~~
/tmp/chat-server.c: In function ‘mochi_main’:
/tmp/chat-server.c:80:4: error: ‘add_clients’ undeclared (first use in this function); did you mean ‘clients’?
   80 |   (add_clients = clients, add("Alice"));
      |    ^~~~~~~~~~~
      |    clients
/tmp/chat-server.c:84:4: error: ‘_remove_clients’ undeclared (first use in this function)
   84 |   (_remove_clients = clients, _remove("Bob"));
      |    ^~~~~~~~~~~~~~~
