tests/rosetta/out/C/chat-server.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:51Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:51Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
int broadcast(char *msg) { printf("%s\n", msg); }

int add(char *name) {
  list_string tmp4 = list_string_create(1);
  tmp4.data[0] = name;
  list_string tmp5 = concat_list_string(clients, tmp4);
  clients = tmp5;
  char *tmp6 = concat_string("+++ \"", name);
  char *tmp7 = concat_string(tmp6, "\" connected +++\n");
  broadcast(tmp7);
}

int send(char *name, char *msg) {
  char *tmp8 = concat_string(name, "> ");
  char *tmp9 = concat_string(tmp8, msg);
  char *tmp10 = concat_string(tmp9, "\n");
  broadcast(tmp10);
}

int _remove(char *name) {
  clients = removeName(clients, name);
  char *tmp11 = concat_string("--- \"", name);
  char *tmp12 = concat_string(tmp11, "\" disconnected ---\n");
  broadcast(tmp12);
}

list_string removeName(list_string names, char *name) {
  list_string out = list_string_create(0);
  for (int tmp1 = 0; tmp1 < names.len; tmp1++) {
    char *n = names.data[tmp1];
    if ((strcmp(n, name) != 0)) {
      list_string tmp2 = list_string_create(1);
      tmp2.data[0] = n;
      list_string tmp3 = concat_list_string(out, tmp2);
      out = tmp3;
    }
  }
  return out;
}

int mochi_main() {
  list_string clients = list_string_create(0);
  (add_clients = clients, add("Alice"));
  (add_clients = clients, add("Bob"));
  send("Alice", "Hello Bob!");
  send("Bob", "Hi Alice!");
  (_remove_clients = clients, _remove("Bob"));
  (_remove_clients = clients, _remove("Alice"));
  broadcast("Server stopping!\n");
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
